--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,31 @@
-#database cOnfiguration
 
+#******************** Mail server properties *********************
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=bgowda282@gmail.com
+spring.mail.password=lugnhfpqkrrasebu
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
+#****************** database cOnfiguration **********************
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/plan_my_trip_db?user=root
 spring.datasource.password=9262112000
-
 spring.datasource.driver-class=com.cj.jdbc.Driver
-
-
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=create-drop
-
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+#************* file or Resource Configuration ******************
+spring.servlet.multipart.enabled=true
+# Threshold after which files are written to disk.
+spring.servlet.multipart.file-size-threshold=2KB
+# Max file size.
+spring.servlet.multipart.max-file-size=200MB
+# Max Request Size
+spring.servlet.multipart.max-request-size=215MB
